restyled nav bar a bit

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Nav Bar */
+.nav-container {
+  position: relative;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(54, 219, 95);
+}
+nav ul li{
+  float:left;
+  padding: 10px;
+  transition-duration: 0.5s;
+  text-decoration: none;
+  color: aliceblue;
+  cursor: pointer;
+}
